# PokemonDBScraper

./: .gitignore  README.md  app.py  pokemondb.db  pyproject.toml
pokemondbscraper/: scraper.py
