[tool.poetry]
name = "pokemondbscraper"
version = "0.1.0"
description = ""
authors = ["josh005"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
